plugins {
	id 'java'
	id 'application'
}

group = 'com.fullcycle.catalogovideo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


dependencies {

}

tasks.named('test') {
	useJUnitPlatform()
}
